--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,3 +12,5 @@ emerald ore(based on default_stone)
 crafting table textures (WIP)
 red sand (based on default_sand)
 spruce trees and planks (my planks texture replaces the unofficial official one)
+
+i cant be bothered to update this, check commit log
